tex report includes week 6 wiki blogs and project images

--- a/spring_progress_report/report/spring_progress.tex
+++ b/spring_progress_report/report/spring_progress.tex
@@ -91,12 +91,12 @@ The things that remain to do are to meet up with our clients to transfer the pro
 This week we met with our client. We implemented the survey taking portion which included: 
 populating camp drop down by date on student log in,
 populating student drop down by selected camp on student log in,
-generating a survey for students to take based on provided info, and
+generate survey for student to take based on provided info,
 store the responses of the taken survey. These required us to create new json objects. 
 The down side to this week is we are slightly late on this as we were hoping to have it to our client on Monday.
  We are still working with Central Services who appear to be ignoring our attempts at communication.
  Next week our client will be able to play with the product and see what they like and don't like.
- This week, on Monday, Kyle helped Shannon with finalizing the survey taking component of the project.
+ This week, on Monday, Kyle helped Shannon with finalizing the survey taking component of our project.
 Kyle also made several changes to the database structure. The Camp table now contains an enrollment array
  of Responder IDs for students enrolled in the camp. This change is also reflected by updating the
  addCamp.php page to do this when uploading enrollment CSV files. The Responder table was updated
@@ -104,7 +104,7 @@ Kyle also made several changes to the database structure. The Camp table now con
  level of education one of their guardians obtained. This demographic information comes from STEM Academy's
  demographic surveys on IdealLogic and is important to how they collect data.
 Next week we will finish development and begin polishing our code. This will likely include,
- adding some error handling to database interaction code (for example, handling adding 
+ on my part, adding some error handling to database interaction code (for example, handling adding 
  duplicates to the database).
 This week Javier fixed a bug that was in the create a new report web page that created a new row in 
 the Report table each time a new report was saved or changes were saved. Javier also made some changes
@@ -114,21 +114,24 @@ the Report table each time a new report was saved or changes were saved. Javier 
  a result for using regular query templates. After getting this done Javier will have to deal with the
  change in response query template and also filtering the query results based on the demographic
  information that was selected. Furthermore, Javier has to fix a bug in his query template drop downs
- and also create nested drop downs for matrix questions. 
+ and also create nested drop downs for matrix questions. All of this will take time to implement, so Javier
+ is hoping that nobody rushes or pressures me to finish all of this because Javier still have to deal with
+ three hw assignments for his other classes.
 \subsection{Week 2}
-This week Shannon got Central Service to finally give the website space. We have everything
+This week Shannon got Central Service to finally give us our website. We have everything
  allocated so we can start moving things over. We have been struggling to complete development.
  Javier has been having a hard time understanding the querying process so Shannon sat down with
  him to help him refactor his code. This took a long time as he struggled with understanding the
  underlying logic of reusing data collected from the database and using json objects. Meanwhile, Kyle
- was going through removing bugs from the code and managed to break a section. It is unclear
+ was going through removing bugs from our code and managed to break a section of my code. It is unclear
  what he did and we attempted to roll back to a previous commit but it doesn't seem to have worked.
  The drop down menus are still broken. This weekend Shannon will be hauling the project into a complete state,
  Shannon will be fixing whatever issue Kyle caused and Shannon will be finishing Javier's code.
- The only blocker is Kyle deleted data from the database which is critical to testing so Shannon will
- have to add more data to the database. Shannon will be finishing the poster draft over the weekend.
+ The only blocker is Kyle deleted data from our database which is critical to testing so Shannon will
+ have to add more data to the database. Shannon will be finishing our poster draft over the weekend.
  We still haven't contacted our client through this entire debacle and they have not contacted us.
- Things will be tight this next week. 
+ Things will be tight this next week. Edit: Kyle's issue was a permissions one. Nothing is broken
+ which is a relief.
  This week Kyle met with the team to work on some polishing while Shannon and Javier worked on finishing
  the report generation. Kyle developed a verification on the randomly generated IDs to make sure that the
  ID being inserted doesn't exist already in the database. If this isn't done, you'd (rarely, but increasingly
@@ -219,8 +222,81 @@ This week not much occurred. The code freeze was met perfectly fine. We got some
  hoping that we get more feedback from the clients, so that we make any changes to the webpages to
  meet their needs and also to fix any bugs that they find.
 \subsection{Week 6}
+This week Shannon contacted our client to set up a meeting to transfer the project. She has yet to hear back from our client. She also set up the mid term progress report document and the slides for the presentation. She mentioned that we still need to create a video demo to run our project for expo and that we will be also transferring things to Central Services web space. This week Kyle worked on generating the new tables for the Central Web Services hosted database to match our current tables. They are currently still empty. He also worked with Javier on adding some functionality for editing camps that our clients need.
+
 \newpage
 \section{Images of Project}
+
+\begin{figure}[!htbp]
+\centering
+\includegraphics[scale=.9]{ProjectImages/IndexPage.png}
+\caption{Starting Page for a Student and Admin}
+\label{fig:code2}
+\end{figure}
+
+\begin{figure}[!htbp]
+\centering
+\includegraphics[scale=.9]{ProjectImages/AdminLogin.png}
+\caption{Admin Login Page}
+\label{fig:code2}
+\end{figure}
+
+\begin{figure}[!htbp]
+\centering
+\includegraphics[scale=.2, width=100mm]{ProjectImages/Dashboard.png}
+\caption{Dashboard Options Page for Admin Users}
+\label{fig:code2}
+\end{figure}
+
+\begin{figure}[!htbp]
+\centering
+\includegraphics[scale=.9]{ProjectImages/AddAdmin.png}
+\caption{Add a New Admin Page}
+\label{fig:code2}
+\end{figure}
+
+\begin{figure}[!htbp]
+\centering
+\includegraphics[scale=.9]{ProjectImages/DeleteAdmin.png}
+\caption{Delete an Admin Page}
+\label{fig:code2}
+\end{figure}
+
+\begin{figure}[!htbp]
+\centering
+\includegraphics[scale=.2, width=100mm]{ProjectImages/AddCamp.png}
+\caption{Add a New Camp Enrollemnt Page}
+\label{fig:code2}
+\end{figure}  
+
+\begin{figure}[!htbp]
+\centering
+\includegraphics[scale=.8]{ProjectImages/SurveyGeneration.png}
+\caption{Generating a New Survey Page}
+\label{fig:code2}
+\end{figure}  
+
+\begin{figure}[!htbp]
+\centering
+\includegraphics[scale=.9]{ProjectImages/ReportGeneration.png}
+\caption{Generating a New Report Page}
+\label{fig:code2}
+\end{figure}  
+
+\begin{figure}[!htbp]
+\centering
+\includegraphics[scale=.9]{ProjectImages/StudentLogin.png}
+\caption{Student Selection Page for Taking a Survey}
+\label{fig:code2}
+\end{figure}  
+
+\begin{figure}[!htbp]
+\centering
+\includegraphics[scale=.2, width=100mm]{ProjectImages/StudentTakingSurvey.png}
+\caption{Student Taking a Survey Page}
+\label{fig:code2}
+\end{figure}  
+
 
 %\bibliographystyle{ieeetr}
 %\bibliography{writing1}
